--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,55 @@
 body {
-  align-items: center;
   background: #000;
-  display: flex;
-  height: 100vh;
-  justify-content: center;
+  color: #333;
+  font-family: "Source Code Pro", monospace;
+  font-size: 16px;
+  font-weight: 300;
   margin: 0;
+}
+
+.app {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  max-height: -webkit-fill-available;
+  place-content: center;
+  align-items: center;
+}
+
+.grid {
+  display: grid;
+  font-size: 5vmin;
+  grid-template-rows: repeat(8, 1fr);
+  height: 90vmin;
+  margin: 5vmin;
+  width: 90vmin;
+}
+
+.row {
+  grid-column: auto / auto;
+  align-content: center;
+  align-items: stretch;
+  display: grid;
+  display: grid;
+  grid-template-columns: repeat(13, 1fr);
+
+  // display: inline-flex;
+  // letter-spacing: 18px;
+  // margin-bottom: 22px;
+
+  // &:last-child {
+  //   margin-bottom: 0;
+  // }
+}
+
+.cell {
+  grid-row: auto / auto;
+  justify-content: center;
+  display: grid;
+  justify-items: stretch;
+}
+
+.active {
+  color: #fff;
 }
